--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 
 	<body>
 	<h1>Under construction...</h1>
-	<a rel="me" href="https://mastodon.ml/@kekson"> </a>
+	<a rel="me" href="https://x.com/kekson1a"> </a>
     </body>
 </html>
