--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta property="og:image" content="https://kekson.me/favicon.png" />
 	<meta property="og:image:width" content="512" />
 	<meta property="og:image:height" content="512" />
-	<meta http-equiv="refresh" content="5; url=https://mastodon.ml/@kekson" />
+	<meta http-equiv="refresh" content="5; url=https://x.com/kekson1a" />
 </head>
 
 	<body>
